<resources>
    <string name="app_name">美妆心得</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activity_chooser_view_see_all">See all...</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with %s</string>
    <string name="abs__searchview_description_search">Search</string>
    <string name="abs__searchview_description_query">Search query</string>
    <string name="abs__searchview_description_clear">Clear query</string>
    <string name="abs__searchview_description_submit">Submit query</string>
    <string name="abs__searchview_description_voice">Voice search</string>
    <string name="removeItem">Remove</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="alarm_skincare_desc">每日23:00开始是肌肤吸收的黄金时间，22:00也是最佳的护肤时间，要养成科学的护肤习惯，千万不要偷懒哦！</string>
    <string name="alarm_mask_desc">不同肤质做面膜频率都不同，正常而言做面膜以每周2到3次为最佳，做前一定要先做好肌肤清洁工作。</string>
    <string name="alarm_hair_mask_desc">美丽的秀发需要养护，发膜不但能令你的发型配增光泽柔顺，更能深度滋养改变头发的发质，发膜以每周1次为佳。</string>
    <string name="alarm_exfoliate_desc">角质是护肤品吸收的一道屏障，不同肌肤角质层薄厚不同，正常肌肤每周至少1次，敏感肌则要根据自己的状况而定。</string>
    <string name="alarm_water_desc">喝水是新陈代谢的一环，一般每天摄水量在1.5L至2L，相当于八杯200ml的水分，科学喝水也是美容的关键。</string>
    <string name="alarm_meds_desc">维生素在美容护肤方面都有独特功效：维生素A皮肤细嫩，维生素B促消化防肥胖，维生素C美白，维生素E抗氧化。</string>
    <string name="alarm_sleep_desc">任何化妆品和饮食都比不上睡眠对肌肤的保健作用大。充足的睡眠是保持皮肤湿润、细腻、青春常驻的首要的条件。</string>
    <string name="alarm_custom_desc">小主儿，设置一个自定义提醒，任何需要提醒的事项我都会及时报时，从此妈妈再也不用担心小主儿忘事啦！</string>
    <string name="analysissdk_lv_loading_next">正在加载下一页…</string>
    <string name="analysissdk_lv_pull_to_refresh">下拉刷新</string>
    <string name="analysissdk_lv_release_to_refresh">松开刷新</string>
    <string name="analysissdk_lv_refreshing">刷新中…</string>
    <string name="analysissdk_lv_last_refresh_time">上次刷新时间：%s</string>
    <string name="analysissdk_btn_send_msg">发送</string>
    <string name="analysissdk_fb_tv_title_conversation">用户反馈</string>
    <string name="analysissdk_fb_tv_title_contact">填写联系方式</string>
    <string name="analysissdk_fb_tv_name">联系名称：</string>
    <string name="analysissdk_fb_tv_contact">联系方式：</string>
    <string name="analysissdk_fb_et_name_hint">填写您的称呼</string>
    <string name="analysissdk_fb_et_contact_hint">填写QQ或电话</string>
    <string name="analysissdk_ensure">确定</string>
    <string name="analysissdk_cancel">取消</string>
    <string name="analysissdk_point">警告</string>
    <string name="analysissdk_update_notify">发现新版本，是否立即更新？</string>
    <string name="analysissdk_update_title">更新</string>
    <string name="analysissdk_update_new_impress">版本新特征：</string>
    <string name="analysissdk_update_apk_size">安装包大小：%s</string>
    <string name="analysissdk_update_exception">SD卡不存在</string>
    <string name="analysissdk_update_now">立即更新</string>
    <string name="analysissdk_update_notnow">以后再说</string>
    <string name="analysissdk_update_ignore">忽略该版本</string>
    <string name="crop__saving">Saving picture…</string>
    <string name="crop__wait">Please wait…</string>
    <string name="crop__pick_error">No image sources available</string>
    <string name="crop__done">DONE</string>
    <string name="crop__cancel">CANCEL</string>
    <string name="action_select">Select</string>
    <string name="cancel">取消</string>
    <string name="finish">完成</string>
    <string name="sharing">分享操作正在后台进行…</string>
    <string name="share_to">分享到</string>
    <string name="share">分享</string>
    <string name="multi_share">图文分享</string>
    <string name="share_completed">分享成功</string>
    <string name="share_canceled">分享已取消</string>
    <string name="select_one_plat_at_least">请选择一个目标平台</string>
    <string name="list_friends">%s的朋友</string>
    <string name="share_failed">分享失败</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">松开刷新</string>
    <string name="refreshing">刷新中…</string>
    <string name="shake2share">摇晃手机！</string>
    <string name="header_hint_refresh_normal">下拉可以刷新</string>
    <string name="header_hint_refresh_ready">松开可以刷新</string>
    <string name="header_hint_refresh_loading">正在刷新…</string>
    <string name="header_hint_refresh_time">更新于：</string>
    <string name="footer_hint_load_normal">查看更多</string>
    <string name="footer_hint_load_ready">松开载入更多</string>
    <string name="weibo_oauth_regiseter">应用授权</string>
    <string name="website">http://www.shareSDK.cn</string>
    <string name="weibo_upload_content">分享图片</string>
    <string name="wechat_client_inavailable">目前您的微信版本过低或未安装微信，需要安装微信才能使用</string>
    <string name="google_plus_client_inavailable">Google+ 版本过低或者没有安装，需要升级或安装Google+才能使用！</string>
    <string name="qq_client_inavailable">QQ 版本过低或者没有安装，需要升级或安装QQ才能使用！</string>
    <string name="pinterest_client_inavailable">Pinterest版本过低或者没有安装，需要升级或安装Pinterest才能使用！</string>
    <string name="instagram_client_inavailable">Instagram版本过低或者没有安装，需要升级或安装Instagram才能使用！</string>
    <string name="yixin_client_inavailable">目前您的易信版本过低或未安装易信，需要安装易信才能使用</string>
    <string name="line_client_inavailable">目前您的Line版本过低或未安装易信，需要安装Line才能使用</string>
    <string name="sinaweibo">新浪微博</string>
    <string name="tencentweibo">腾讯微博</string>
    <string name="qzone">QQ空间</string>
    <string name="wechat">微信好友</string>
    <string name="wechatmoments">微信朋友圈</string>
    <string name="wechatfavorite">微信收藏</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="renren">人人网</string>
    <string name="kaixin">开心网</string>
    <string name="email">邮件</string>
    <string name="shortmessage">信息</string>
    <string name="sohumicroblog">搜狐微博</string>
    <string name="sohusuishenkan">搜狐随身看</string>
    <string name="neteasemicroblog">网易微博</string>
    <string name="douban">豆瓣</string>
    <string name="youdao">有道云笔记</string>
    <string name="evernote">印象笔记</string>
    <string name="linkedin">领英</string>
    <string name="googleplus">Google+</string>
    <string name="foursquare">FourSquare</string>
    <string name="qq">QQ</string>
    <string name="pinterest">Pinterest</string>
    <string name="flickr">Flickr</string>
    <string name="tumblr">Tumblr</string>
    <string name="dropbox">Dropbox</string>
    <string name="vkontakte">VK</string>
    <string name="instagram">Instagram</string>
    <string name="yixin">易信</string>
    <string name="yixinmoments">易信朋友圈</string>
    <string name="mingdao">明道</string>
    <string name="line">Line</string>
    <string name="share_to_qzone">分享到QQ空间</string>
    <string name="share_to_qq">分享到QQ</string>
    <string name="mingdao_share_content">网页分享</string>
    <string name="share_to_mingdao">分享到明道</string>
    <string name="share_to_qzone_default">来自%s的分享</string>
    <string name="use_login_button">请改用“登录”按钮</string>
    <string name="title_brand">品牌</string>
    <string name="title_category">分类</string>
    <string name="title_mine">个人中心</string>
    <string name="title_more">设置</string>
    <string name="title_app">女性应用推荐</string>
    <string name="title_forum">社区</string>
    <string name="title_about">关于我们</string>
    <string name="title_contact">联系我们</string>
    <string name="title_assistant">助手</string>
    <string name="title_detail">美妆详情</string>
    <string name="title_new_comment">最新评论</string>
    <string name="title_comment">写点评</string>
    <string name="title_plugin">助手</string>
    <string name="title_mytopic">我的帖子</string>
    <string name="title_skin_test">肤质测试</string>
    <string name="title_test_result">肤质结果</string>
    <string name="title_user_info">编辑个人资料</string>
    <string name="title_fav_want">欲望清单</string>
    <string name="title_fav_have">买过的宝贝</string>
    <string name="title_fav_dp">点评过的宝贝</string>
    <string name="btn_edit_info">编辑资料</string>
    <string name="btn_submit">提交</string>
    <string name="btn_clear_apks">清除</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">美妆心得</string>
    <string name="list_icon">分类图标</string>
    <string name="back">返回</string>
    <string name="month_sell">月销量:</string>
    <string name="lose_network">网络未连接，请检查网络设置</string>
    <string name="network_timeout">网络超时</string>
    <string name="buy_title">手机淘宝网</string>
    <string name="main_home">首页</string>
    <string name="main_list">点评</string>
    <string name="main_mine">我的</string>
    <string name="main_forum">讨论</string>
    <string name="main_brand">品牌</string>
    <string name="main_zhushou">助手</string>
    <string name="main_more">更多</string>
    <string name="default_search_text">搜索</string>
    <string name="search_btn">搜索</string>
    <string name="shop">店铺:</string>
    <string name="umeng_title_app">更多精彩应用</string>
    <string name="product_list_sellname">销量:</string>
    <string name="more_title_about">关于我们</string>
    <string name="about_content_title">美妆心得 - 你的美妆消费指南</string>
    <string name="about_content_detail">"美妆心得的诞生，就是为了帮助姐妹们选择自己最适合的化妆品。这里汇聚了大量的真实的化妆品点评信息，什么产品好，什么产品不好，完全由姐妹们的口碑说的算。

金杯银杯不如口碑，买化妆品前来看看美妆心得，少一点冲动，少一点后悔。同时，你也可以和大家一起分享心得，结识更多爱美的闺蜜，获得交流分享的乐趣。"</string>
    <string name="about_content_contact" />
    <string name="contact_us">联系我们</string>
    <string name="contact_content_title">联系我们：</string>
    <string name="contact_weibo">【微博】美妆心得APP</string>
    <string name="contact_meixiaoxing">【美小星微信】meixiaoxing2014</string>
    <string name="contact_weixin">【微信】meizhuangxinde</string>
    <string name="contact_email">【邮箱】hi@cosmeapp.com</string>
    <string name="contact_feedback">【意见反馈】QQ群130920725（意见建议、改进产品、修改BUG）</string>
    <string name="maintab_home">首页</string>
    <string name="maintab_product">美妆</string>
    <string name="maintab_discovery">发现</string>
    <string name="maintab_mine">我的</string>
    <string name="UMUpdateTitle">New version found</string>
    <string name="UMUpdateNow">Update now</string>
    <string name="UMNotNow">Not now</string>
    <string name="preference_title_iat">听写设置</string>
    <string name="preference_key_iat_engine">iat_engine</string>
    <string name="preference_title_iat_engine">听写引擎</string>
    <string name="preference_default_iat_engine">sms</string>
    <string name="preference_dialog_title_iat_engine">选择听写引擎</string>
    <string name="preference_key_poi_province">poi_province</string>
    <string name="preference_title_poi_province">地图搜索省份</string>
    <string name="preference_default_poi_province">全选</string>
    <string name="preference_dialog_title_poi_province">选择地图搜索省份</string>
    <string name="preference_key_poi_city">poi_city</string>
    <string name="preference_title_poi_city">地图搜索城市</string>
    <string name="preference_default_poi_city">全选</string>
    <string name="preference_dialog_title_poi_city">选择地图搜索城市</string>
    <string name="preference_key_iat_rate">iat_rate</string>
    <string name="preference_title_iat_rate">录音采样率</string>
    <string name="preference_default_iat_rate">rate16k</string>
    <string name="preference_dialog_title_iat_rate">选择听写采样率</string>
</resources>