<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/default_grey_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/font_big" android:textColor="@color/default_black" android:gravity="center|left" android:id="@id/contact_content_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="14.0dip" android:layout_marginTop="20.0dip" android:layout_marginBottom="5.0dip" android:text="@string/contact_content_title" />
    <TextView android:textSize="@dimen/font_middle" android:textColor="@color/default_black" android:id="@id/contact_email" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="14.0dip" android:layout_marginTop="14.0dip" android:layout_marginRight="14.0dip" android:text="@string/contact_email" android:lineSpacingExtra="3.0dip" />
    <TextView android:textSize="@dimen/font_middle" android:textColor="@color/default_black" android:autoLink="all" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="14.0dip" android:layout_marginTop="14.0dip" android:layout_marginRight="14.0dip" android:text="@string/contact_weibo" android:lineSpacingExtra="3.0dip" />
    <TextView android:textSize="@dimen/font_middle" android:textColor="@color/default_black" android:autoLink="all" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="14.0dip" android:layout_marginTop="14.0dip" android:layout_marginRight="14.0dip" android:text="@string/contact_meixiaoxing" android:lineSpacingExtra="3.0dip" />
    <TextView android:textSize="@dimen/font_middle" android:textColor="@color/default_black" android:autoLink="all" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="14.0dip" android:layout_marginTop="14.0dip" android:layout_marginRight="14.0dip" android:text="@string/contact_weixin" android:lineSpacingExtra="3.0dip" />
    <TextView android:textSize="@dimen/font_middle" android:textColor="@color/default_black" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="14.0dip" android:layout_marginTop="14.0dip" android:layout_marginRight="14.0dip" android:text="@string/contact_email" android:lineSpacingExtra="3.0dip" />
    <TextView android:textSize="@dimen/font_middle" android:textColor="@color/default_black" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="14.0dip" android:layout_marginTop="14.0dip" android:layout_marginRight="14.0dip" android:text="@string/contact_feedback" android:lineSpacingExtra="3.0dip" />
</LinearLayout>