<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/default_grey_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/font_big" android:textColor="@color/default_black" android:gravity="center|left" android:id="@id/about_content_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="14.0dip" android:layout_marginTop="20.0dip" android:layout_marginBottom="5.0dip" android:text="@string/about_content_title" />
    <TextView android:textSize="@dimen/font_middle" android:textColor="@color/default_black" android:id="@id/about_content_detail" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="14.0dip" android:layout_marginTop="14.0dip" android:layout_marginRight="14.0dip" android:layout_marginBottom="9.0dip" android:text="@string/about_content_detail" android:lineSpacingExtra="3.0dip" />
    <TextView android:textSize="@dimen/font_middle" android:textColor="@color/default_black" android:id="@id/about_content_contact" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="14.0dip" android:layout_marginRight="14.0dip" android:text="@string/about_content_contact" android:lineSpacingExtra="3.0dip" />
</LinearLayout>