<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:background="#ff303537" android:layout_width="fill_parent" android:layout_height="48.0dip">
        <LinearLayout android:id="@id/ll_back" android:paddingLeft="9.0dip" android:paddingRight="17.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent">
            <ImageView android:layout_gravity="center_vertical" android:background="@drawable/analysissdk_back_arrow" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="9.0dip" />
            <ImageView android:layout_gravity="center_vertical" android:background="@drawable/analysissdk_sharesdk_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView android:textSize="20.0sp" android:textColor="#ffcfcfcf" android:layout_gravity="center_vertical" android:id="@id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:background="#ffffffff" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="15.0sp" android:layout_gravity="center_vertical" android:id="@id/tv_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/analysissdk_fb_tv_name" />
        <EditText android:textSize="15.0sp" android:textColor="#ff000000" android:gravity="center_vertical" android:id="@id/et_name" android:background="@drawable/analysissdk_fb_et_bg_selector" android:layout_width="0.0dip" android:layout_height="wrap_content" android:minHeight="40.0dip" android:hint="@string/analysissdk_fb_et_name_hint" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:background="#ffffffff" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="15.0sp" android:layout_gravity="center_vertical" android:id="@id/tv_contact" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/analysissdk_fb_tv_contact" />
        <EditText android:textSize="15.0sp" android:textColor="#ff000000" android:gravity="center_vertical" android:id="@id/et_contact" android:background="@drawable/analysissdk_fb_et_bg_selector" android:layout_width="0.0dip" android:layout_height="wrap_content" android:minHeight="40.0dip" android:hint="@string/analysissdk_fb_et_contact_hint" android:layout_weight="1.0" />
    </LinearLayout>
    <Button android:textSize="15.0sp" android:textColor="#ff000000" android:gravity="center" android:id="@id/btn_ensure" android:background="@drawable/analysissdk_fb_btn_selector" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="14.0dip" android:layout_marginRight="10.0dip" android:text="@string/analysissdk_ensure" />
</LinearLayout>