<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="#ff3cac17" android:gravity="center_vertical" android:id="@id/update_tv_dialog_title" android:padding="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/analysissdk_update_title" />
    <View android:background="#ff3cac17" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <TextView android:textSize="15.0sp" android:textColor="#ffffffff" android:id="@id/update_tv_dialog_content" android:scrollbars="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="5.0dip" android:maxHeight="250.0dip" android:singleLine="false" android:lineSpacingMultiplier="1.1" />
    <CheckBox android:textSize="15.0sp" android:textColor="#ffffffff" android:id="@id/update_cb_ignore" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginBottom="5.0dip" android:minWidth="150.0dip" android:text="@string/analysissdk_update_ignore" style="@style/AnalysisSDK_UpdateCheckBox" />
    <View android:background="#ff737373" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textColor="#ffffffff" android:id="@id/update_btn_dialog_ok" android:background="@drawable/analysissdk_dialog_btn_back" android:padding="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/analysissdk_update_now" android:layout_weight="1.0" />
        <View android:background="#ff737373" android:layout_width="1.0dip" android:layout_height="fill_parent" />
        <Button android:textColor="#ffffffff" android:id="@id/update_btn_dialog_cancel" android:background="@drawable/analysissdk_dialog_btn_back" android:padding="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/analysissdk_update_notnow" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>